# burst2safe

./: CHANGELOG.md  LICENSE  README.md  environment.yml  pyproject.toml  test_product.py
.github/: CODEOWNERS
.github/workflows/: build-and-deploy-test.yml  build-and-deploy.yml  bump-version.yml  changelog-check.yml  pytest-golden.yml  pytest-integration.yml  pytest.yml  release-checklist-comment.yml  release.yml  reusable-pytest.yml  static-analysis.yml  tag-version.yml
src/burst2safe/: aiohttp_b2s.py  auth.py  base.py  burst2safe.py  burst2stack.py  burst_id.py  calibration.py  download.py  local2safe.py  manifest.py  measurement.py  noise.py  product.py  rfi.py  safe.py  search.py  swath.py  token_example.py  utils.py
src/burst2safe/data/support_245/: s1-level-1-noise.xsd  s1-level-1-product.xsd
src/burst2safe/data/support_371/: s1-object-types.xsd
tests/: conftest.py  helpers.py  test_all_anns.py  test_auth.py  test_base.py  test_burst2safe.py  test_burst_id.py  test_calibration.py  test_golden.py  test_include_mid.py  test_ipf.py  test_local2safe.py  test_manifest.py  test_measurement.py  test_noise.py  test_product.py  test_rfi.py  test_safe.py  test_search.py  test_swath.py  test_utils.py
tests/etc/: identify_ipf_differences.py
