[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project]
name = "burst2safe"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [
    {name="Forrest Williams", email="ffwilliams2@alaska.edu"},
]
description = "A package for converting ASF-derived Sentinel-1 burst SLC products to the ESA SAFE format"
readme = "README.md"
classifiers=[
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "gdal",
  "shapely>=2",
  "numpy",
  "lxml",
  "tifffile",
  "asf_search",
]

[project.urls]
Homepage = "https://github.com/forrestfwilliams/burst2safe"
"Bug Tracker" ="https://github.com/forrestfwilliams/burst2safe/issues"

[project.scripts]
burst2safe = "burst2safe.burst2safe:main"

[project.optional-dependencies]
develop = [
    "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = '-ra -q -m "not integration and not golden"'
markers = ["integration", "golden"]
testpaths = ["tests"]

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyx?$'

[tool.ruff]
line-length = 120
src = ['src', 'tests']

[tool.ruff.format]
indent-style = 'space'
quote-style = 'single'

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
