[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project]
name = "burst2safe"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [
    {name="Forrest Williams", email="ffwilliams2@alaska.edu"},
]
maintainers = [
    {name="ASF APD/Tools Team", email="uaf-asf-apd@alaska.edu"},
]

description = "A package for converting ASF-derived Sentinel-1 burst SLC products to the ESA SAFE format"
readme = "README.md"
classifiers=[
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "gdal",
  "shapely>=2",
  "numpy<2.1.0",
  "lxml",
  "tifffile>=2022.04.22",
  "asf_search",
  "dateparser!=1.1.0",
  "aiohttp",
]

[project.urls]
Homepage = "https://github.com/ASFHyP3/burst2safe"
"Bug Tracker" ="https://github.com/ASFHyP3/burst2safe/issues"

[project.scripts]
burst2safe = "burst2safe.burst2safe:main"
burst2stack = "burst2safe.burst2stack:main"
local2safe = "burst2safe.local2safe:main"

[project.optional-dependencies]
develop = [
    "pytest",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = '-ra -q -m "not integration and not golden"'
markers = ["integration", "golden"]
testpaths = ["tests"]

[tool.black]
line-length = 120
skip-string-normalization = true
include = '\.pyx?$'

[tool.ruff]
line-length = 120
# The directories to consider when resolving first- vs. third-party imports.
# See: https://docs.astral.sh/ruff/settings/#src
src = ["src", "tests"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",   # isort: https://docs.astral.sh/ruff/rules/#isort-i
    # TODO: Uncomment the following extensions and address their warnings:
    # "UP",  # pyupgrade: https://docs.astral.sh/ruff/rules/#pyupgrade-up
    # "D",   # pydocstyle: https://docs.astral.sh/ruff/rules/#pydocstyle-d
    # "ANN", # annotations: https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    # "PTH", # use-pathlib-pth: https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
